# VectorX

./: CMakeLists.txt  README.md
src/: app_config.h  main.cpp
src/debug/: debug_log.cpp  debug_log.h
src/features/: aim.cpp  aim.h  esp.cpp  esp.h
src/ui/: menu.cpp  menu.h  state.h
src/window/: window_utils.cpp  window_utils.h
